Fix #31 et affichage des caracteristiques des cartes sur leurs images

--- a/MHClient/mini-hearthstone/src/app/app.component.css
+++ b/MHClient/mini-hearthstone/src/app/app.component.css
@@ -72,22 +72,57 @@
     background-color: red;
     color: white;
 }
+.cardImgContainer {
+    position: relative;
+    text-align: center;
+}
+.bottom-left {
+    text-shadow:
+            -1px -1px 0 #000,
+            1px -1px 0 #000,
+            -1px 1px 0 #000,
+            1px 1px 0 #000;
+    position: absolute;
+    bottom: 8px;
+    left: 16px;
+    color: red;
+}
+
+.bottom-right {
+    text-shadow:
+            -1px -1px 0 #000,
+            1px -1px 0 #000,
+            -1px 1px 0 #000,
+            1px 1px 0 #000;
+    position: absolute;
+    bottom: 8px;
+    right: 16px;
+    color: green;
+}
+
+.top-right {
+    text-shadow:
+            -1px -1px 0 #000,
+            1px -1px 0 #000,
+            -1px 1px 0 #000,
+            1px 1px 0 #000;
+    position: absolute;
+    top: 8px;
+    right: 16px;
+    color: dodgerblue;
+}
 
 .card {
      margin-left: 1vw;
-     transition: 0.3s;
      display:inline-block;
      height: 12vh;
      vertical-align: top;
 }
 
 .targetDetails {
-    margin-left: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
+    margin-left: 1vw;
     display:inline-block;
-    width: 20%;
-    padding: 5px;
+    height: 12vh;
     vertical-align: top;
     position: relative;
 }
