J'héberge les images du dos des cartes sur imgur

--- a/MHClient/mini-hearthstone/src/app/app.component.html
+++ b/MHClient/mini-hearthstone/src/app/app.component.html
@@ -34,7 +34,7 @@
 
     <div id="parentHisHand" class="row">
         <a class="card" *ngFor="let hisCard of hisHand" >
-            <img class="card" src= "https://bit.ly/2CMnTps" alt="Avatar">
+            <img class="card" src= "https://i.imgur.com/AotB9OX.png" alt="Avatar">
         </a>
     </div>
 
